# vouch

./: Cargo.toml  README.md
.github/workflows/: main.yaml
vouch/: Cargo.toml  README.md
vouch-js/: Cargo.toml
vouch-js/src/: bin.rs  lib.rs  npm.rs
vouch-lib/: Cargo.toml
vouch-lib/src/: lib.rs
vouch-lib/src/extension/: common.rs  mod.rs  process.rs
vouch-lib/src/extension/commands/: common.rs  from_process.rs  identify_file_defined_dependencies.rs  identify_local_dependancies.rs  identify_local_dependencies.rs  identify_package_dependencies.rs  mod.rs  registries_package_metadata.rs  remote_package_metadata.rs  static_data.rs
vouch-py/: Cargo.toml
vouch-py/src/: bin.rs  lib.rs  pipfile.rs
vouch/src/: main.rs
vouch/src/command/: extension.rs  mod.rs  peer.rs  review.rs  sync.rs
vouch/src/command/check/: dependancies.rs  dependencies.rs  fs.rs  mod.rs  package.rs  report.rs  specific.rs  table.rs
vouch/src/command/review/: mod.rs  summary.rs  workspace.rs
vouch/src/command/review/workspace/: mod.rs  vscode.rs
vouch/src/command/setup/: fs.rs  mod.rs
vouch/src/common/: fs.rs  index.rs  mod.rs
vouch/src/common/config/: core.rs  extensions.rs  mod.rs  review_tool.rs
vouch/src/common/fs/: archive.rs  mod.rs
vouch/src/extension/: mod.rs  process.rs
vouch/src/extension/manage/: github.rs  mod.rs
vouch/src/package/: common.rs  index.rs  mod.rs
vouch/src/peer/: common.rs  fs.rs  index.rs  mod.rs
vouch/src/registry/: common.rs  index.rs  mod.rs
vouch/src/review/: active.rs  comments.rs  detailed.rs  fs.rs  index.rs  mod.rs  workspace.rs
vouch/src/review/comment/: common.rs  index.rs  mod.rs
vouch/src/review/common/: mod.rs  package_security.rs  rating.rs  review_confidence.rs  summary.rs
vouch/src/review/tool/: mod.rs  vscode.rs
vouch/src/store/: index.rs  mod.rs
