[package]
name = "vouch-lib"
version = "0.2.3"
authors = ["rndhouse <rndhouse@protonmail.com>"]
edition = "2018"
repository = "https://github.com/vouch-dev/vouch"
license = "MIT"
description = "Core library for the Vouch package review system."

[dependencies]
anyhow = "1.0.31"
structopt = "0.3.14"

url = "2.1.1"

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_yaml = "0.8.13"
