[package]
name = "vouch-py"
version = "0.1.0"
authors = ["rndhouse <rndhouse@protonmail.com>"]
edition = "2018"
repository = "https://github.com/vouch-dev/vouch"

[lib]
name = "vouch_py_lib"
path = "src/lib.rs"

[[bin]]
name = "vouch-py"
path = "src/bin.rs"

[dependencies]
vouch-lib = { path = "../vouch-lib", version = "0.1.0" }

anyhow = "1.0.31"
structopt = "0.3.14"
strum = "0.20.0"
strum_macros = "0.20.1"
maplit = "1.0.2"

url = "2.1.1"
reqwest = { version = "0.10.6", features = ["blocking"] }

handlebars = "3.1.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
